tests/tests_p1/pass/prof/31ok.min
program start 2147483647! "\n"!
end
