tests/tests_p1/fail/prof/26startret.min
program start return 0
end
